--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,7 +11,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class=""><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="{% url 'profile-update' %}">Account</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {% if request.user.is_authenticated %}
