--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,8 +18,8 @@
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Welcome {{ user.username | title}}<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">My Account</a></li>
-              <li><a href="#">Settings</a></li>
+              <li><a href="/myaccount/">My Account</a></li>
+              <!-- <li><a href="#">Settings</a></li> -->
               <li><a href="/logout/"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
             </ul>
           </li>
