change project name to talent in

--- a/templates/list_user.html
+++ b/templates/list_user.html
@@ -4,6 +4,10 @@
     <div class="row">
       <div class="col-sm-3" style="margin-top: 95px;">
         <div class="well">
+          <div class="text-center">
+            <b>Filter Talent</b>
+            <br><br>
+          </div>
           <form>
             <!-- Year Filter -->
             <select name="year" class="form-control">
